--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "foodrecognition",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://dimitrisz123.github.io/foodrecognition",
   "dependencies": {
     "@material-ui/core": "^1.3.1",
+    "clarifai": "^2.8.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-scripts": "1.1.4"
@@ -12,6 +14,11 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "gh-pages": "^1.2.0"
   }
 }
