--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: circleci/node:chakracore-10-browsers-legacy
+      - image: circleci/node:8
     steps:
       - checkout
       - restore_cache: # special step to restore the dependency cache
