--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "dependencies": {
     "@material-ui/core": "^1.3.1",
     "clarifai": "^2.8.0",
+    "normalize.css": "^8.0.1",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "react-scripts": "^1.1.5"
+    "react-scripts": "2.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -20,5 +21,11 @@
   },
   "devDependencies": {
     "gh-pages": "^1.2.0"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
